<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="action_example">Chat</string>
    <string name="action_settings">Settings</string>

    <string name="application_key">romiglobal17772a3c4ed97f4f955bbd60edc4f13c1</string>
    <string name="default_server_url">https://apps.applozic.com</string>
    <string name="default_mqtt_server_url">tcp://apps.applozic.com:1883</string>
    <string name="default_media_location_folder">Romi</string>

    <string name="invite_message">Hey, check out ROMI - the app that translates for you. Roam round the world now</string>

    <string name="facebook_app_id">236209870203620</string>
    <string name="fb_login_protocol_scheme">fb236209870203620</string>


    <string name="app_name">Romi</string>
    <string name="sign_up_personal_title">Personal Details</string>
    <string name="sign_up_profile_title">Profile Details?</string>
    <string name="sign_up_user_details_title">User Details?</string>
    <string name="log_in_title_page">Log in</string>
    <string name="first_name">First Name?</string>
    <string name="last_name">Last Name?</string>
    <string name="user_name">User Name?</string>
    <string name="email">Email?</string>
    <string name="password">Password?</string>
    <string name="phone_number">Phone Number?</string>
    <string name="confirm_password">Confirm Password?</string>
    <string name="language">Language?</string>
    <string name="status">Status?</string>
    <string name="country">Country?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_login">Login </string>
    <string name="permissions_needed">Permission is not granted</string>

    <string-array name="languages_array">
        <item>Azerbaijan</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>English</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Afrikaans</item>
        <item>Basque</item>
        <item>Bashkir</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Burmese</item>
        <item>Bulgarian</item>
        <item>Bosnian</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Estonian</item>
        <item>Esperanto</item>
        <item>Welsh</item>
        <item>Hungarian</item>
        <item>Haitian (Creole)</item>
        <item>Galician</item>
        <item>Dutch</item>
        <item>Hill</item>
        <item>Mari</item>
        <item>Greek</item>
        <item>Georgian</item>
        <item>Gujarati</item>
        <item>Danish</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Yiddish</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Icelandic</item>
        <item>Spanish</item>
        <item>Kazakh</item>
        <item>Kannada</item>
        <item>Khmer</item>
        <item>Catalan</item>
        <item>Kyrgyz</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Javanese</item>
        <item>Korean</item>
        <item>Laotian</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Luxembourgish</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Macedonian</item>
        <item>Marathi</item>
        <item>Maori</item>
        <item>Mari</item>
        <item>Mongolian</item>
        <item>German</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Punjabi</item>
        <item>Papiamento</item>
        <item>Persian</item>
        <item>Portuguese</item>
        <item>Polish</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Cebuano</item>
        <item>Serbian</item>
        <item>Sinhala</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Swahili</item>
        <item>Sundanese</item>
        <item>Scottish</item>
        <item>Swedish</item>
        <item>Tajik</item>
        <item>Thai</item>
        <item>Tagalog</item>
        <item>Tatar</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Turkish</item>
        <item>Udmurt</item>
        <item>Uzbek</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Xhosa</item>
        <item>Vietnamese</item>
        <item>Finnish</item>
        <item>French</item>
    </string-array>

    <string name="title_activity_home">Romi</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_settings">Settings</string>
    <string name="title_chat">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_intro">ROMI</string>

    <string name="introtitle1">Welcome</string>
    <string name="introtitle2">Chat</string>
    <string name="introtitle3">Attachments</string>
    <string name="introtitle4">Romi</string>

    <string name="introDescription1">Welcome to ROMI, we help you communicate with people who speak a different language to you. </string>
    <string name="introDescription2">Chat with anyone anywhere, and don\'t worry about receiving messages of a different language we\'ll handle that for you </string>
    <string name="introDescription3">Send photo\'s, video\'s and audio recording with anyone anywhere</string>
    <string name="introDescription4">So what you waiting for, start now. Roam round the globe</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="add_language">Add Language</string>
    <string name="edit_display_name">Edit Display Name</string>
    <string name="text_alert">Alert</string>
    <string name="title_activity_main2">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
