<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/RegTitle.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_profile_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            style="@style/Input.White"
            android:id="@+id/ac_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_status"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/ac_country"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>