<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RegLayout"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        style="@style/RegTitle.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_personal_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/alphabet_a">

        <EditText
            android:id="@+id/et_first_name"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_last_name"
        android:textColorHint="@color/alphabet_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_last_name"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:textColorHint="@color/alphabet_a"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_email"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_phone_number"
        android:layout_width="match_parent"
        android:textColorHint="@color/alphabet_a"
        android:layout_height="wrap_content">

        <EditText
            style="@style/Input.White"
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>