<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        style="@style/RegTitle.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_user_details_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_user_name"
        android:layout_width="match_parent"
        android:textColorHint="@color/alphabet_a"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_user_name"
            style="@style/Input.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:textColorHint="@color/alphabet_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_password"
        style="@style/Input.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_confirm_password"
        android:textColorHint="@color/alphabet_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/Input.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>