<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunset">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="gone" />

    <Button
        android:id="@+id/login_next"
        style="@style/RegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        android:elevation="8dp"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--<com.facebook.login.widget.LoginButton-->
    <!--android:id="@+id/login_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--tools:layout_editor_absoluteY="508dp"-->
    <!--tools:layout_editor_absoluteX="210dp" />-->

    <FrameLayout
        android:id="@+id/login_fragment_container"
        android:layout_width="311dp"
        android:layout_height="411dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_next"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="31dp">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/RegTitle.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_title_page" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/alphabet_a">

                <EditText
                    android:id="@+id/et_login_username"
                    style="@style/Input.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/alphabet_a">

                <EditText
                    android:id="@+id/et_login_Password"
                    style="@style/Input.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_login_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/alphabet_a">

                <AutoCompleteTextView
                    android:id="@+id/ac_login_language"
                    style="@style/Input.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/language" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>